Some new test expectations. Teach test-generator about transform. Improve default test name generation. Modify test-calc and test-composite-transforms to include spacer. Modify test-color-names to run multiple color morphs in parallel.

--- a/test/testcases/test-calc.html
+++ b/test/testcases/test-calc.html
@@ -82,6 +82,10 @@ limitations under the License.
   height: 350px;
 }
 
+.spacer {
+  height: 400px;
+}
+
 </style>
 
 Blue lines should all hit the deep red boundary at the same time, then
@@ -103,6 +107,8 @@ completely cover the light red box when the animation has finished.
   <div class="anim" id="f"></div>
   <div class="expectation" style="top: 300px; width: 131.25px"></div>
   <div class="anim" id="g"></div>
+</div>
+<div class="spacer">
 </div>
 
 <script src="../../web-animations.js"></script>
