--- a/test/testcases/test-composite-transforms.html
+++ b/test/testcases/test-composite-transforms.html
@@ -59,6 +59,8 @@ limitations under the License.
 <div id="d" class="anim"></div>
 <div id="d" style="top: 550px; left: 0px;" class="expected"></div>
 
+<div style="height: 700px;"></div>
+
 <script src="../../web-animations.js"></script>
 <script src="../anim-test-pre.js"></script>
 <script>
