--- a/test/test-generator.html
+++ b/test/test-generator.html
@@ -43,6 +43,32 @@ input#iframeSrc {
 <div id = "checks"></div>
 
 <script>
+
+function detectFeatures() {
+  var style = document.createElement('style');
+  style.textContent = '' +
+     'dummyRuleForTesting {' +
+     'width: calc(0px);' +
+     'width: -webkit-calc(0px); }';
+  document.head.appendChild(style);
+  var transformCandidates = [
+      'transform',
+      'webkitTransform',
+      'msTransform'
+  ];
+  var transformProperty = transformCandidates.filter(function(property) {
+    return property in style.sheet.cssRules[0].style;
+  })[0];
+  var calcFunction = style.sheet.cssRules[0].style.width.split('(')[0];
+  document.head.removeChild(style);
+  return {
+    transformProperty: transformProperty,
+    calcFunction: calcFunction
+  };
+}
+
+var features = detectFeatures();
+
 var testCurrentTime;
 var testLength = 0;
 var lastRun = false;
@@ -102,6 +128,13 @@ function process(rawString){
   }
 }
 
+var svgProperties = {
+  'cx': 1,
+  'width': 1,
+  'x': 1,
+  'y': 1,
+};
+
 var propertyIsSVGAttrib = function(property, target) {
   return target.namespaceURI == 'http://www.w3.org/2000/svg' &&
       property in svgProperties;
@@ -121,7 +154,9 @@ function generate(){
             getComputedStyle(checks[x].object[i], null);
 
         var p = checks[x].properties[j];
-        var value = isSVG ? props[p].value : props[p];
+        var pp = p;
+        if (p == 'transform') pp = features.transformProperty;
+        var value = isSVG ? props[pp].value : props[pp];
         propsPrint += "'"+ p + "':'" + value + "'";
         if (j < checks[x].properties.length -1) propsPrint += ",";
       }
