--- a/test/testcases/test-player.html
+++ b/test/testcases/test-player.html
@@ -188,4 +188,13 @@ addEventListener('load', function() {
   check(animation4.localTime, 0, "localTime should be set by playing");
 });
 
+// Test that updates to currentTime take immediate effect.
+addEventListener('load', function() {
+  var animation5 = new Animation(document.getElementById("anim"),
+      {left: "100px"});
+  document.timeline.play(animation5).currentTime = 42;
+  check(animation5.localTime, 42,
+      "Updates to Player.currentTime should take immediate effect");
+});
+
 </script>
