--- a/test/testcases/test-fill-values.html
+++ b/test/testcases/test-fill-values.html
@@ -67,37 +67,39 @@ limitations under the License.
 </div>
 
 <div class="animContainer" id="cb">
-  <div style="width: 300px;" class="exp"><div id="a" class="anim"></div></div>
-  <div style="width: 300px;" class="exp"><div id="b" class="anim"></div></div>
-  <div style="width: 300px;" class="exp"><div id="c" class="anim"></div></div>
-  <div style="width: 300px;" class="exp"><div id="d" class="anim"></div></div>
-  <div style="width: 400px;" class="exp"><div id="e" class="anim"></div></div>
-  <div style="width: 400px;" class="exp"><div id="f" class="anim"></div></div>
-  <div style="width: 400px;" class="exp"><div id="g" class="anim"></div></div>
-  <div style="width: 400px;" class="exp"><div id="h" class="anim"></div></div>
+  <div style="width: 300px;" class="exp"><div id="i" class="anim"></div></div>
+  <div style="width: 300px;" class="exp"><div id="j" class="anim"></div></div>
+  <div style="width: 300px;" class="exp"><div id="k" class="anim"></div></div>
+  <div style="width: 300px;" class="exp"><div id="l" class="anim"></div></div>
+  <div style="width: 400px;" class="exp"><div id="m" class="anim"></div></div>
+  <div style="width: 400px;" class="exp"><div id="n" class="anim"></div></div>
+  <div style="width: 400px;" class="exp"><div id="o" class="anim"></div></div>
+  <div style="width: 400px;" class="exp"><div id="p" class="anim"></div></div>
 </div>
 
 <div class="animContainer" id="cc">
-  <div style="width: 300px;" class="exp"><div id="a" class="anim"></div></div>
-  <div style="width: 300px;" class="exp"><div id="b" class="anim"></div></div>
-  <div style="width: 300px;" class="exp"><div id="c" class="anim"></div></div>
-  <div style="width: 300px;" class="exp"><div id="d" class="anim"></div></div>
-  <div style="width: 400px;" class="exp"><div id="e" class="anim"></div></div>
-  <div style="width: 400px;" class="exp"><div id="f" class="anim"></div></div>
-  <div style="width: 400px;" class="exp"><div id="g" class="anim"></div></div>
-  <div style="width: 400px;" class="exp"><div id="h" class="anim"></div></div>
+  <div style="width: 300px;" class="exp"><div id="q" class="anim"></div></div>
+  <div style="width: 300px;" class="exp"><div id="r" class="anim"></div></div>
+  <div style="width: 300px;" class="exp"><div id="s" class="anim"></div></div>
+  <div style="width: 300px;" class="exp"><div id="t" class="anim"></div></div>
+  <div style="width: 400px;" class="exp"><div id="u" class="anim"></div></div>
+  <div style="width: 400px;" class="exp"><div id="v" class="anim"></div></div>
+  <div style="width: 400px;" class="exp"><div id="w" class="anim"></div></div>
+  <div style="width: 400px;" class="exp"><div id="x" class="anim"></div></div>
 </div>
 
 <div class="animContainer" id="cd">
-  <div style="width: 300px;" class="exp"><div id="a" class="anim"></div></div>
-  <div style="width: 300px;" class="exp"><div id="b" class="anim"></div></div>
-  <div style="width: 300px;" class="exp"><div id="c" class="anim"></div></div>
-  <div style="width: 300px;" class="exp"><div id="d" class="anim"></div></div>
-  <div style="width: 500px;" class="exp"><div id="e" class="anim"></div></div>
-  <div style="width: 500px;" class="exp"><div id="f" class="anim"></div></div>
-  <div style="width: 500px;" class="exp"><div id="g" class="anim"></div></div>
-  <div style="width: 500px;" class="exp"><div id="h" class="anim"></div></div>
+  <div style="width: 300px;" class="exp"><div id="y" class="anim"></div></div>
+  <div style="width: 300px;" class="exp"><div id="z" class="anim"></div></div>
+  <div style="width: 300px;" class="exp"><div id="aa" class="anim"></div></div>
+  <div style="width: 300px;" class="exp"><div id="ab" class="anim"></div></div>
+  <div style="width: 500px;" class="exp"><div id="ac" class="anim"></div></div>
+  <div style="width: 500px;" class="exp"><div id="ad" class="anim"></div></div>
+  <div style="width: 500px;" class="exp"><div id="ae" class="anim"></div></div>
+  <div style="width: 500px;" class="exp"><div id="af" class="anim"></div></div>
 </div>
+
+<div style="height: 1000px;"></div>
 
 <script src="../../web-animations.js"></script>
 <script src="../anim-test-pre.js"></script>
