--- a/test/testcases/test-integer.html
+++ b/test/testcases/test-integer.html
@@ -34,6 +34,9 @@ var width = 25;
 var totalWidth = 800;
 var startZ = 0;
 var endZ = 100;
+var test = document.querySelector("#test");
+var marker = test.nextSibling;
+
 for (var i = 0; i < totalWidth; i += width) {
   var div = document.createElement("div");
   div.style.width = width + "px";
@@ -42,7 +45,7 @@ for (var i = 0; i < totalWidth; i += width) {
   div.style.zIndex = startZ +
       Math.round((i / totalWidth) * (endZ - startZ));
   div.style.position = "relative";
-  document.body.appendChild(div);
+  document.body.insertBefore(div, marker);
 }
 document.timeline.play(new Animation(document.querySelector("#test"),
     {"zIndex": [String(startZ), String(endZ)]}, 3));
