--- a/test/testcases/test-iterations-basic.html
+++ b/test/testcases/test-iterations-basic.html
@@ -60,28 +60,30 @@ iteration (or start if reversed).</div>
 <div>Right edge of each box should align with black line at end of test.</div>
 
 <div class="animContainer" id="ca">
-  <div class="expected" style="width: 280px;"><div class="anim a"></div></div>
-  <div class="expected" style="width: 280px;"><div class="anim b"></div></div>
-  <div class="expected" style="width: 280px;"><div class="anim c"></div></div>
+  <div class="expected" style="width: 280px;"><div class="anim a" id="a"></div></div>
+  <div class="expected" style="width: 280px;"><div class="anim b" id="b"></div></div>
+  <div class="expected" style="width: 280px;"><div class="anim c" id="c"></div></div>
 </div>
 
 <div class="animContainer" id="cb">
-  <div class="expected" style="width: 200px;"><div class="anim a"></div></div>
-  <div class="expected" style="width: 200px;"><div class="anim b"></div></div>
-  <div class="expected" style="width: 280px;"><div class="anim c"></div></div>
+  <div class="expected" style="width: 200px;"><div class="anim a" id="d"></div></div>
+  <div class="expected" style="width: 200px;"><div class="anim b" id="e"></div></div>
+  <div class="expected" style="width: 280px;"><div class="anim c" id="f"></div></div>
 </div>
 
 <div class="animContainer" id="cc">
-  <div class="expected" style="width: 200px;"><div class="anim a"></div></div>
-  <div class="expected" style="width: 200px;"><div class="anim b"></div></div>
-  <div class="expected" style="width: 280px;"><div class="anim c"></div></div>
+  <div class="expected" style="width: 200px;"><div class="anim a" id="g"></div></div>
+  <div class="expected" style="width: 200px;"><div class="anim b" id="h"></div></div>
+  <div class="expected" style="width: 280px;"><div class="anim c" id="i"></div></div>
 </div>
 
 <div class="animContainer" id="cd">
-  <div class="expected" style="width: 280px;"><div class="anim a"></div></div>
-  <div class="expected" style="width: 280px;"><div class="anim b"></div></div>
-  <div class="expected" style="width: 280px;"><div class="anim c"></div></div>
+  <div class="expected" style="width: 280px;"><div class="anim a" id="j"></div></div>
+  <div class="expected" style="width: 280px;"><div class="anim b" id="k"></div></div>
+  <div class="expected" style="width: 280px;"><div class="anim c" id="l"></div></div>
 </div>
+
+<div style="height: 400px;"></div>
 
 <script src="../../web-animations.js"></script>
 <script src="../anim-test-pre.js"></script>
