--- a/test/testcases/test-iteration-start.html
+++ b/test/testcases/test-iteration-start.html
@@ -79,40 +79,42 @@ reversed).</div>
 <div class="expectation" style="top: 650px; left: 180px; height: 150px;"></div>
 
 <div class="animContainer" id="ca">
-  <div class="anim a"></div>
-  <div class="anim b"></div>
-  <div class="anim c"></div>
-  <div class="anim d"></div>
-  <div class="anim e"></div>
-  <div class="anim f"></div>
+  <div class="anim a" id="a"></div>
+  <div class="anim b" id="b"></div>
+  <div class="anim c" id="c"></div>
+  <div class="anim d" id="d"></div>
+  <div class="anim e" id="e"></div>
+  <div class="anim f" id="f"></div>
 </div>
 
 <div class="animContainer" id="cb">
-  <div class="anim a"></div>
-  <div class="anim b"></div>
-  <div class="anim c"></div>
-  <div class="anim d"></div>
-  <div class="anim e"></div>
-  <div class="anim f"></div>
+  <div class="anim a" id="g"></div>
+  <div class="anim b" id="h"></div>
+  <div class="anim c" id="i"></div>
+  <div class="anim d" id="j"></div>
+  <div class="anim e" id="k"></div>
+  <div class="anim f" id="l"></div>
 </div>
 
 <div class="animContainer" id="cc">
-  <div class="anim a"></div>
-  <div class="anim b"></div>
-  <div class="anim c"></div>
-  <div class="anim d"></div>
-  <div class="anim e"></div>
-  <div class="anim f"></div>
+  <div class="anim a" id="m"></div>
+  <div class="anim b" id="n"></div>
+  <div class="anim c" id="o"></div>
+  <div class="anim d" id="p"></div>
+  <div class="anim e" id="q"></div>
+  <div class="anim f" id="r"></div>
 </div>
 
 <div class="animContainer" id="cd">
-  <div class="anim a"></div>
-  <div class="anim b"></div>
-  <div class="anim c"></div>
-  <div class="anim d"></div>
-  <div class="anim e"></div>
-  <div class="anim f"></div>
+  <div class="anim a" id="s"></div>
+  <div class="anim b" id="t"></div>
+  <div class="anim c" id="u"></div>
+  <div class="anim d" id="v"></div>
+  <div class="anim e" id="w"></div>
+  <div class="anim f" id="x"></div>
 </div>
+
+<div style="height: 800px;"></div>
 
 <script src="../../web-animations.js"></script>
 <script src="../anim-test-pre.js"></script>
