--- a/test/test-runner.html
+++ b/test/test-runner.html
@@ -44,12 +44,8 @@ var runID = window.location.href.split("?")[1];
 checkForResults();
 updateState();
 
-function postResultsToServer(resultObject){
-  var xhr = new XMLHttpRequest();
-  xhr.open("POST", "http://14.200.8.150/web-animations-test-infrastructure/collectResults.php", true);
-  xhr.setRequestHeader("Content-type","application/x-www-form-urlencoded");
-  xhr.send("data=" + JSON.stringify(resultObject));
-  console.log(JSON.stringify(resultObject));
+function postResultsToServer(resultObject) {
+  // TODO: post the results somewhere
 }
 
 function updateState(change) {
